Fix spacing around text fields in the status bar

--- a/source/main/resources/xenon.css
+++ b/source/main/resources/xenon.css
@@ -295,6 +295,10 @@
 	-fx-padding: 0.5mm 1mm 0.5mm 1mm;
 }
 
+.status-bar .text-field {
+	-fx-padding: 0.5mm 1mm 0.5mm 1mm;
+}
+
 /*******************************************************************************
  * Notice
  ******************************************************************************/
